syntax = "proto3";

package requestf;

message ReqPacket {
    int32 version       =   1;
    int32 reqId         =   2;
    string funcName     =   3;
    string servant      =   4;
    bytes content       =   5;
    int32 timeout       =   6;
}

message RspPacket {
    int32 version       =   1;
    int32 reqId         =   2;
    bytes content       =   3;
    bool isErr          =   4;
    string resDesc      =   5;
}